--- a/package.json
+++ b/package.json
@@ -15,8 +15,17 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "firebase": "^9.9.4",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^16.5.2",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-reveal": "^1.2.2",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
