--- a/package.json
+++ b/package.json
@@ -2,36 +2,55 @@
   "name": "count-me-in",
   "version": "1.0.0",
   "description": "",
+  "license": "GPL",
+  "author": "Dennis Peter George; Hemant Hari Kumar; Siddarth Sairaj",
   "main": "src/server/index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npm run build && node src/server/index.js",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon src/server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "npm run build && node src/server/index.js"
   },
-  "author": "Dennis Peter George; Hemant Hari Kumar; Siddarth Sairaj",
-  "license": "GPL",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.4",
     "babel-polyfill": "^6.26.0",
+    "baseui": "^9.65.3",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "express": "^4.16.3",
     "firebase": "^9.9.4",
+    "fs": "0.0.1-security",
+    "gh-pages": "^2.1.1",
+    "graphql": "^14.5.8",
+    "node-fetch": "^2.6.0",
+    "prettier-package-json": "^2.1.3",
+    "radium": "^0.26.0",
     "react": "^16.5.2",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.5.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-reveal": "^1.2.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@iconify/icons-logos": "^1.0.9",
+    "@iconify/react": "^1.1.1",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
@@ -44,11 +63,23 @@
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "nodemon": "^1.17.3",
+    "prettier": "2.0.5",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.json": "prettier-package-json --write",
+    "*.{js,css,md}": "prettier --write"
   }
 }
