--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "Dennis Peter George; Hemant Hari Kumar; Siddarth Sairaj",
   "license": "GPL",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "react": "^18.2.0",
