--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "express": "^4.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
-  },
+    "react-router-dom": "^6.3.0",
+    "firebase": "^7.20.0"
+},
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -48,3 +49,4 @@
     "webpack-dev-server": "^3.1.3"
   }
 }
+
