--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@mui/material": "^5.10.4",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "firebase": "^7.20.0",
+    "flat": "^5.0.2",
     "prop-types": "^15.8.1",
     "randomstring": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "firebase": "^7.20.0"
-},
+    "react-router-dom": "^6.3.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -51,4 +52,3 @@
     "webpack-dev-server": "^3.1.3"
   }
 }
-
