Basic MongoDB setup

--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "babel-polyfill": "^6.26.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.16.3",
     "firebase": "^7.20.0",
+    "mongoose": "^6.6.0",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "randomstring": "^1.2.2",
     "react": "^18.2.0",
