--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.10.4",
     "@mui/system": "^5.10.4",
     "@mui/x-date-pickers": "^5.0.1",
+    "@tanstack/react-query": "^4.3.1",
     "babel-polyfill": "^6.26.0",
     "country-state-city": "^3.1.2",
     "date-fns": "^2.29.2",
